Change req.body.roles to Object.keys(roles)[0]
